feat: implement notification context
