# src/application/controller/exam.controller.ts
@@ -1,8 +1,14 @@
-import { Controller, Get, Route } from "tsoa";
+import { Body, Controller, Get, Path, Post, /* Response as ApiResponse,  */Route, Tags, Inject, SuccessResponse } from "tsoa";
 import { ExamService } from "../../domain/service/exam.service";
-import { Exam } from "../../domain/entity/Exam";
+import { Exam } from "../../domain/entity/exam/Exam";
+import { ICreateExamDTO } from "../../domain/entity/exam/create-exam.dto";
+import { Request, Response } from "express";
+// import { responseCreateExam } from "src/infrastructure/dataset/exam.data";
+// import { responseCreateExam } from "../../infrastructure/dataset/exam.data";
+// import NotificationContext from "../../domain/validators/notificationContext.validators";
 
-@Route("exam")
+@Route("exams")
+@Tags("Exam")
 export class ExamController extends Controller {
 
 	private readonly _service: ExamService;
@@ -12,9 +18,23 @@ export class ExamController extends Controller {
 		this._service = new ExamService();
 	}
 
-	@Get("/post")
-	public async postExam(newEntity: Exam): Promise<Exam | null> {
-		return await this._service.newExamTeste(newEntity);
+	@Post("/")
+	@SuccessResponse(201, 'Success')
+	public async postExam(
+		@Inject() req: Request,
+		@Inject() res: Response,
+		@Body() newEntity: ICreateExamDTO
+	)/* : Promise<Exam | string[]> */ {
+
+		const result = await this._service.newExamTeste(newEntity);
+
+		if (result instanceof Exam) {
+			res.status(201).send(result);
+			return result;
+		} else {
+			res.status(422).send(result._notifications);
+			return result._notifications;
+		}
 	}
 
 	@Get("/all")
@@ -23,7 +43,9 @@ export class ExamController extends Controller {
 	}
 
 	@Get("/:id")
-	public async getExam(id: string): Promise<Exam | null> {
+	public async getExam(
+		@Path() id: string
+	): Promise<Exam | null> {
 		return await this._service.findExam(id);
 	}
 }
