# src/application/router/exam.router.ts
@@ -1,18 +1,16 @@
 import type { Request, Response } from 'express';
 import express from 'express';
 import { ExamController } from '../controller/exam.controller';
-import { Exam } from '../../domain/entity/Exam';
+// import { ICreateExam } from '../../domain/entity/exam/create-exam.dto';
 
 
 const router = express.Router();
 const _controller = new ExamController();
 
-router.get("/post", async (req: Request, res: Response) => {
-	const body: Exam = req.body;
+router.post("/", async (req: Request, res: Response) => {
+	const body = req.body;
 
-	return res.status(200).send(
-		await _controller.postExam(body)
-	);
+	return await _controller.postExam(req, res, body);
 });
 
 router.get("/all", async (req: Request, res: Response) => {
